# gosh-optim

./: .gitignore  Cargo.toml
src/: dynamics.rs  lib.rs  opt.rs  optimization.rs  potential.rs  vars.rs
tests/: test_opt.rs  test_potential.rs
