# [[file:optim.note::eeb92e72][eeb92e72]]
[package]
name = "gosh-optim"
version = "0.1.0"
edition = "2021"
authors = ["Wenping Guo <ybyygu@gmail.com>"]

[dependencies]
gosh-core = { version = "0.1.0", features=["adhoc"] }
gosh-database = { version = "0.1", features=["adhoc"] }
gosh-model = { version = "0.1", features=["adhoc"] }
lbfgs = { version = "0.0.18", package="liblbfgs" }
fire = { version = "0.0.9" }
envy = "0.4"
serde = {version="1", features = ["derive"]}

[dev-dependencies]

[features]
# for easy development
adhoc = []
# eeb92e72 ends here
